# stm32h5xx-hal

./: .gitignore  Cargo.toml  Cross.toml  LICENSE-0BSD.txt  NOTES.md  README.md  build.rs  memory.x
.cargo/: config.toml
.github/: bors.toml
.github/workflows/: ci.yml  clippy.yml  nightly.yml  rustfmt.yml  version-match.yml
examples/: adc.rs  adc12.rs  await-pins.rs  blinky.rs  blinky_random.rs  blinky_timer.rs  crc.rs  dma.rs  dwt-blinky.rs  flash.rs  flash_option_bytes.rs  flash_otp.rs  fractional-pll.rs  i2c.rs  i2c_target.rs  i2c_target_manual_ack.rs  rcc.rs  serial.rs  spi-async-rtic.rs  spi-dma.rs  spi.rs  spi_send_frames.rs  spi_slave.rs  usart.rs  usb_serial.rs
examples/utilities/: logger.rs
src/: crc.rs  delay.rs  dwt.rs  flash.rs  gpdma.rs  gpio.rs  i2c.rs  icache.rs  lib.rs  macros.rs  prelude.rs  pwm.rs  pwr.rs  rcc.rs  rng.rs  serial.rs  signature.rs  spi.rs  time.rs  timer.rs  usb.rs
src/adc/: h5.rs  mod.rs
src/flash/: operations.rs
src/gpdma/: ch.rs  config.rs  future.rs  periph.rs
src/gpdma/config/: transform.rs
src/gpio/: convert.rs  dynamic.rs  erased.rs  exti.rs  future.rs  gpio_def.rs  hal.rs  partially_erased.rs
src/i2c/: config.rs  hal.rs  i2c_def.rs
src/pwm/: h5.rs  mod.rs
src/rcc/: core_clocks.rs  mco.rs  pll.rs  rec.rs  reset_reason.rs
src/serial/: config.rs  usart.rs
src/serial/usart/: usart_def.rs
src/spi/: config.rs  dma.rs  hal.rs  nonblocking.rs  spi_def.rs  transaction.rs
src/timer/: counters.rs  timer_def.rs
tests/: nucleo-h533.rs
tests/common/: mod.rs
tools/: verify-rust-version.js
